# protobuf-grpc-distutils

./: pyproject.toml
src/protobuf_grpc_distutils/: __init__.py  generate_grpc_py_protobufs.py
