[project]
name = "protobuf-grpc-distutils"
description = ""
authors = [
    { name = "Shareef Jalloq" },
    { email = "shareef.jalloq@idexbiometrics.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
keywords = [
    "verilator",
    "simulation",
    "opentitan",
    "backdoor",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "grpcio_tools",
]
version = "0.1.0"

[project.urls]
homepage = "https://github.com/idex-biometrics/protobuf-grpc-distutils"

[build-system]
requires = [
    "setuptools>=61.0", 
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.entry-points."distutils.commands"]
generate_grpc_py_protobufs = "protobuf_grpc_distutils.generate_grpc_py_protobufs:generate_grpc_py_protobufs"